# ros2-basics

./: .gitignore  README.md
chapt1/: a.out  hello_world.cpp
chapt2/: CMakeLists.txt.back  ros2_cpp_node.cpp  ros2_python_node.py
chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
chapt2/chapt2_ws/src/demo_python_pkg/: package.xml  setup.py
chapt2/notes/: cpp_package.md  python_package.md
chapt3/novel/: novel1.txt
chapt3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_publisher/: package.xml  setup.py
chapt3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/demo_python_topic/: package.xml  setup.py
chapt4/chapt4_ws/src/chapt4_interfaces/: package.xml
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
chapt5/: rviz_tf.rviz
chapt5/chapt5_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
chapt5/chapt5_ws/src/demo_python_tf/: package.xml  setup.py
chapt6/chapt6_ws/src/fishbot_description/: package.xml
chapt7/: README.md
chapt7/chapt7_ws/src/autopatrol_robot/: package.xml  setup.cfg  setup.py
chapt7/chapt7_ws/src/fishbot_application/: package.xml  setup.py
chapt7/chapt7_ws/src/fishbot_description/: CMakeLists.txt
chapt8/chapt8_ws/src/nav2_custom_planner/: CMakeLists.txt  custom_planner_plugin.xml  package.xml
chapt8/chapt8_ws/src/nav2_custom_planner/include/nav2_custom_planner/: nav2_custom_planner.hpp
chapt8/chapt8_ws/src/nav2_custom_planner/src/: nav2_custom_planner.cpp
(+99 files in other folders)
